@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Added mouse!=0 check in Fl_Glut_Window::handle (STR #2381)
 	- Fixed menu and shortcut handling (STR #2243)
 	- Removed support for gcc 2.x (or older)
 	- Fixed fltk-config to give --libs on one line (STR #2408)
